app: Don't change the title on tab labels that no longer exist (take 2)

This fixes a potential crash when a tab is moved to another window,
and later the title of that terminal changes.

https://bugzilla.gnome.org/show_bug.cgi?id=730389
(cherry picked from commit f65261a0b5d03658be3acb439976fd8af6fa28ea)